# CryptoParadoxOS

./: .replit  blockchain_data_generator.py  blockchain_manager.py  github_data_builder.py  github_metrics.py  gnn_model.py  graph_processor.py  main.py  main_basic.py  main_cleaned.py  main_complete.py  main_fixed.py  model.py  pyproject.toml  replit.nix  utils.py  visualization.py  web_scraper.py
attached_assets/: Blockchain-Agnostic-Paradoxical-OS-Whitepaper.txt  Pasted-Generating-CSV-dataset-The-user-wants-a-CSV-dataset-from-GitHub-focusing-on-cryptopond-or-Ethereum-1740958335853.txt  Pasted-Whitepaper-Paradoxical-OS-Innovation-Strategy-for-Cryptopond-AI-Challenge-1-Introduction-Paradox-1740956686326.txt
data/: ethereum_dependencies.csv  github_data.csv  polkadot_dependencies.csv  sample_dependency_graph.csv  solana_dependencies.csv
data/blockchains/: README.md  ethereum.json  polkadot.json  solana.json
data/github_cache/: repos_ethereum_EIPs.json  repos_ethereum_EIPs_contributors.json  repos_ethereum_EIPs_issues_state_all_per_page_100.json  repos_ethereum_consensus-specs_stats_commit_activity.json  repos_ethereum_eth2_0-specs.json  repos_ethereum_eth2_0-specs_contributors.json  repos_ethereum_eth2_0-specs_issues_state_all_per_page_100.json  repos_ethereum_execution-apis.json  repos_ethereum_execution-apis_contributors.json  repos_ethereum_execution-apis_issues_state_all_per_page_100.json  repos_ethereum_go-ethereum.json  repos_ethereum_go-ethereum_contributors.json  repos_ethereum_go-ethereum_issues_state_all_per_page_100.json  repos_ethereum_plasma.json  (+27 more)
